# crc_course_work

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt
crc_main/: CMakeLists.txt  CRC_main.cpp  CRC_main.h
tests/: CMakeLists.txt  crc_test.h  tests.cpp
